[package]
name = "when-http"
version = "0.1.0"
authors = ["Boris Tatarintsev <ttyv00@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
chrono-tz = "0.4"
chrono = "0.4"
hyper = "0.12"
futures = "0.1.27"
url = "1.4.0"
serde_json = "1.0.39"
serde = { version = "1.0.91", features = ["derive"] }
when = { git = "https://github.com/risboo6909/when", version = "0.1.1" }
